# mini-data-platform

./: .env  .gitignore  LICENSE  README.md  future_work.md  justfile  pyproject.toml  setup.sh
airflow/: airflow.cfg
airflow/dags/: ingest_sources.py
airflow/utils/: warehouse.py
astro/: __init__.py  agent.py  charts.py  cli.py  db.py  display.py  fmt.py
astro/semantic/: __init__.py  manifest.py  manifest.yml
evals/: assertions.py  cases.yml  conftest.py  test_runner.py
evidence/: package-lock.json
plans/: agent-high-level-design.md  data-ingestion-design.md  phase1-query.md  todo.md
scripts/: sync_sources.py
sources/: sources.yml
sources/analytics/: pageviews.csv
sources/postgres/: products.csv  tmdb_movies.csv  transactions.csv  users.csv
sources/salesforce/: campaigns.csv
