[project]
name = "astro-surya-oss"
version = "0.1.0"
description = "Query your DuckDB data warehouse using natural language"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "Surya Duggirala" }]
keywords = ["duckdb", "llm", "data-warehouse", "natural-language", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "duckdb>=1.4.1",
    "google-genai>=1.0.0",
    "plotext>=5.2.8",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["astro"]

[project.scripts]
surya-astro = "astro.cli:main"
